--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
     <link rel="stylesheet" href="/css/index.css" />
   </head>
   <body>
+    <nav class="navbar-primary text-white mb-4">
+      <div class="container">
+        <h2 class="site-title">Sterg CSS</h2>
+        <p>A lightweight CSS library</p>
+      </div>
+    </nav>
     <div class="container">
       <!-- colors -->
       <h2 class="mb-2">Colors</h2>
