--- a/index.html
+++ b/index.html
@@ -4,15 +4,17 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SASS Library</title>
+    <title>Sterg Designs</title>
 
     <link rel="stylesheet" href="/css/index.css" />
   </head>
   <body>
     <nav class="navbar-primary text-white mb-4">
       <div class="container">
-        <h2 class="site-title">Sterg CSS</h2>
-        <p>A lightweight CSS library</p>
+        <h2 class="site-title text-hover-primary-dark-6">Sterg Designs</h2>
+        <p class="text-hover-primary-dark-6">
+          A lightweight CSS library empowered with SASS
+        </p>
       </div>
     </nav>
     <div class="container">
